--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,17 @@ body, button, input, select, textarea {font: 100%  'Lato', sans-serif; *font-siz
 
 ::selection {background: #2E8B57; color: #fff; text-shadow: none} /* selected text */
 
+/* Meters */
+.meter {
+  height: 24px;  /* Can be anything */
+  position: relative;
+  border: 1px solid #f1f1f1;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  margin-bottom: 1em;
+}
+
 .meter > span {
   display: block;
   height: 100%;
