--- a/css/pillar-1.css
+++ b/css/pillar-1.css
@@ -1,21 +1,3 @@
-Skip to content
- 
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@yinfung96 
-0
-0 0 Devansh876/devansh876.github.io
- Code  Issues 0  Pull requests 0  Projects 0  Wiki  Security  Insights
-devansh876.github.io/pillar-1.css
-@Devansh876 Devansh876 Add files via upload
-9ba3449 on Feb 2
-8724 lines (7597 sloc)  158 KB
-    
 /*! 
  * Template Name: Pillar - Bootstrap 4 Resume/CV Template for Developers
  * Version: 1.0.1
@@ -31,7 +13,7 @@ devansh876.github.io/pillar-1.css
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-:root {
+/*:root {
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -60,8 +42,8 @@ devansh876.github.io/pillar-1.css
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-
+}*/
+/*
 *,
 *::before,
 *::after {
@@ -81,10 +63,11 @@ html {
   width: device-width;
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+/*article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
+/*
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -465,12 +448,12 @@ mark,
   padding: 0.2em;
   background-color: #fcf8e3;
 }
-
+*/
 .list-unstyled {
   padding-left: 0;
   list-style: none;
 }
-
+/*
 .list-inline {
   padding-left: 0;
   list-style: none;
@@ -4783,7 +4766,7 @@ input[type="button"].btn-block {
     background-position: 0 0;
   }
 }
-
+*/
 .progress {
   display: flex;
   height: 1rem;
@@ -4803,7 +4786,7 @@ input[type="button"].btn-block {
   background-color: #434E5E;
   transition: width 0.6s ease;
 }
-
+/*
 @media screen and (prefers-reduced-motion: reduce) {
   .progress-bar {
     transition: none;
@@ -8520,9 +8503,9 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-
+*/
 /*************************** Pillar Styles ****************************/
-body {
+/*body {
   font-family: 'Roboto', sans-serif;
   background: #F7F8FA;
   -webkit-font-smoothing: antialiased;
@@ -8739,6 +8722,7 @@ a.theme-btn-on-bg:hover, a.theme-btn-on-bg:focus, a.theme-btn-on-bg:active, .the
     border-radius: 4px;
   }
 }
+*/
 © 2019 GitHub, Inc.
 Terms
 Privacy
@@ -8751,3 +8735,4 @@ API
 Training
 Blog
 About
+
