--- a/css/pillar-1.css
+++ b/css/pillar-1.css
@@ -4769,11 +4769,12 @@ input[type="button"].btn-block {
 */
 .progress {
   display: flex;
-  height: 1rem;
+  height: 2rem;
   overflow: hidden;
   font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem;
+  margin: 0 0 12px;
 }
 
 .progress-bar {
